parserFiles/Cooklang.output
Terminals unused in grammar

    COMMENT


State 9 conflicts: 4 shift/reduce
State 10 conflicts: 4 shift/reduce
State 15 conflicts: 4 shift/reduce
State 26 conflicts: 3 shift/reduce
State 30 conflicts: 3 shift/reduce


Grammar

    0 $accept: input $end

    1 input: ε
    2      | input line

    3 line: NL
    4     | step NL
    5     | METADATA NL

    6 step: direction
    7     | step direction
    8     | step WHTS

    9 direction: text_item
   10          | timer
   11          | cookware
   12          | ingredient
   13          | HWORD text_item
   14          | ATWORD text_item
   15          | text_item WHTS

   16 text_item: WORD
   17          | MULTIWORD
   18          | NUMBER
   19          | PUNC_CHAR
   20          | text_item WORD
   21          | text_item MULTIWORD
   22          | text_item NUMBER
   23          | text_item METADATA

   24 amount: LCURL RCURL
   25       | LCURL WHTS RCURL
   26       | LCURL NUMBER RCURL
   27       | LCURL NUMBER UNIT RCURL
   28       | LCURL WORD RCURL
   29       | LCURL WORD UNIT RCURL
   30       | LCURL MULTIWORD RCURL
   31       | LCURL MULTIWORD UNIT RCURL

   32 cookware_amount: LCURL RCURL
   33                | LCURL WHTS RCURL
   34                | LCURL NUMBER RCURL
   35                | LCURL WORD RCURL
   36                | LCURL MULTIWORD RCURL

   37 cookware: HWORD
   38         | HWORD cookware_amount
   39         | HWORD WORD cookware_amount
   40         | HWORD MULTIWORD cookware_amount

   41 ingredient: ATWORD
   42           | ATWORD amount
   43           | ATWORD WORD amount
   44           | ATWORD MULTIWORD amount

   45 timer: TILDE amount
   46      | TILDE WORD
   47      | TILDE WORD amount
   48      | TILDE MULTIWORD amount


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    WORD <string> (258) 16 20 28 29 35 39 43 46 47
    MULTIWORD <string> (259) 17 21 30 31 36 40 44 48
    UNIT <string> (260) 27 29 31
    NUMBER <number> (261) 18 22 26 27 34
    LCURL <character> (262) 24 25 26 27 28 29 30 31 32 33 34 35 36
    RCURL <character> (263) 24 25 26 27 28 29 30 31 32 33 34 35 36
    PUNC_CHAR <string> (264) 19
    NL <character> (265) 3 4 5
    TILDE (266) 45 46 47 48
    HWORD <string> (267) 13 37 38 39 40
    ATWORD <string> (268) 14 41 42 43 44
    METADATA <string> (269) 5 23
    COMMENT (270)
    WHTS <string> (271) 8 15 25 33


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    input <string> (18)
        on left: 1 2
        on right: 0 2
    line <string> (19)
        on left: 3 4 5
        on right: 2
    step <string> (20)
        on left: 6 7 8
        on right: 4 7 8
    direction <string> (21)
        on left: 9 10 11 12 13 14 15
        on right: 6 7
    text_item <string> (22)
        on left: 16 17 18 19 20 21 22 23
        on right: 9 13 14 15 20 21 22 23
    amount <string> (23)
        on left: 24 25 26 27 28 29 30 31
        on right: 42 43 44 45 47 48
    cookware_amount <string> (24)
        on left: 32 33 34 35 36
        on right: 38 39 40
    cookware <string> (25)
        on left: 37 38 39 40
        on right: 11
    ingredient <string> (26)
        on left: 41 42 43 44
        on right: 12
    timer <string> (27)
        on left: 45 46 47 48
        on right: 10


State 0

    0 $accept: • input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input • $end
    2 input: input • line

    $end       shift, and go to state 2
    WORD       shift, and go to state 3
    MULTIWORD  shift, and go to state 4
    NUMBER     shift, and go to state 5
    PUNC_CHAR  shift, and go to state 6
    NL         shift, and go to state 7
    TILDE      shift, and go to state 8
    HWORD      shift, and go to state 9
    ATWORD     shift, and go to state 10
    METADATA   shift, and go to state 11

    line        go to state 12
    step        go to state 13
    direction   go to state 14
    text_item   go to state 15
    cookware    go to state 16
    ingredient  go to state 17
    timer       go to state 18


State 2

    0 $accept: input $end •

    $default  accept


State 3

   16 text_item: WORD •

    $default  reduce using rule 16 (text_item)


State 4

   17 text_item: MULTIWORD •

    $default  reduce using rule 17 (text_item)


State 5

   18 text_item: NUMBER •

    $default  reduce using rule 18 (text_item)


State 6

   19 text_item: PUNC_CHAR •

    $default  reduce using rule 19 (text_item)


State 7

    3 line: NL •

    $default  reduce using rule 3 (line)


State 8

   45 timer: TILDE • amount
   46      | TILDE • WORD
   47      | TILDE • WORD amount
   48      | TILDE • MULTIWORD amount

    WORD       shift, and go to state 19
    MULTIWORD  shift, and go to state 20
    LCURL      shift, and go to state 21

    amount  go to state 22


State 9

   13 direction: HWORD • text_item
   37 cookware: HWORD •
   38         | HWORD • cookware_amount
   39         | HWORD • WORD cookware_amount
   40         | HWORD • MULTIWORD cookware_amount

    WORD       shift, and go to state 23
    MULTIWORD  shift, and go to state 24
    NUMBER     shift, and go to state 5
    LCURL      shift, and go to state 25
    PUNC_CHAR  shift, and go to state 6

    WORD       [reduce using rule 37 (cookware)]
    MULTIWORD  [reduce using rule 37 (cookware)]
    NUMBER     [reduce using rule 37 (cookware)]
    PUNC_CHAR  [reduce using rule 37 (cookware)]
    $default   reduce using rule 37 (cookware)

    text_item        go to state 26
    cookware_amount  go to state 27


State 10

   14 direction: ATWORD • text_item
   41 ingredient: ATWORD •
   42           | ATWORD • amount
   43           | ATWORD • WORD amount
   44           | ATWORD • MULTIWORD amount

    WORD       shift, and go to state 28
    MULTIWORD  shift, and go to state 29
    NUMBER     shift, and go to state 5
    LCURL      shift, and go to state 21
    PUNC_CHAR  shift, and go to state 6

    WORD       [reduce using rule 41 (ingredient)]
    MULTIWORD  [reduce using rule 41 (ingredient)]
    NUMBER     [reduce using rule 41 (ingredient)]
    PUNC_CHAR  [reduce using rule 41 (ingredient)]
    $default   reduce using rule 41 (ingredient)

    text_item  go to state 30
    amount     go to state 31


State 11

    5 line: METADATA • NL

    NL  shift, and go to state 32


State 12

    2 input: input line •

    $default  reduce using rule 2 (input)


State 13

    4 line: step • NL
    7 step: step • direction
    8     | step • WHTS

    WORD       shift, and go to state 3
    MULTIWORD  shift, and go to state 4
    NUMBER     shift, and go to state 5
    PUNC_CHAR  shift, and go to state 6
    NL         shift, and go to state 33
    TILDE      shift, and go to state 8
    HWORD      shift, and go to state 9
    ATWORD     shift, and go to state 10
    WHTS       shift, and go to state 34

    direction   go to state 35
    text_item   go to state 15
    cookware    go to state 16
    ingredient  go to state 17
    timer       go to state 18


State 14

    6 step: direction •

    $default  reduce using rule 6 (step)


State 15

    9 direction: text_item •
   15          | text_item • WHTS
   20 text_item: text_item • WORD
   21          | text_item • MULTIWORD
   22          | text_item • NUMBER
   23          | text_item • METADATA

    WORD       shift, and go to state 36
    MULTIWORD  shift, and go to state 37
    NUMBER     shift, and go to state 38
    METADATA   shift, and go to state 39
    WHTS       shift, and go to state 40

    WORD       [reduce using rule 9 (direction)]
    MULTIWORD  [reduce using rule 9 (direction)]
    NUMBER     [reduce using rule 9 (direction)]
    WHTS       [reduce using rule 9 (direction)]
    $default   reduce using rule 9 (direction)


State 16

   11 direction: cookware •

    $default  reduce using rule 11 (direction)


State 17

   12 direction: ingredient •

    $default  reduce using rule 12 (direction)


State 18

   10 direction: timer •

    $default  reduce using rule 10 (direction)


State 19

   46 timer: TILDE WORD •
   47      | TILDE WORD • amount

    LCURL  shift, and go to state 21

    $default  reduce using rule 46 (timer)

    amount  go to state 41


State 20

   48 timer: TILDE MULTIWORD • amount

    LCURL  shift, and go to state 21

    amount  go to state 42


State 21

   24 amount: LCURL • RCURL
   25       | LCURL • WHTS RCURL
   26       | LCURL • NUMBER RCURL
   27       | LCURL • NUMBER UNIT RCURL
   28       | LCURL • WORD RCURL
   29       | LCURL • WORD UNIT RCURL
   30       | LCURL • MULTIWORD RCURL
   31       | LCURL • MULTIWORD UNIT RCURL

    WORD       shift, and go to state 43
    MULTIWORD  shift, and go to state 44
    NUMBER     shift, and go to state 45
    RCURL      shift, and go to state 46
    WHTS       shift, and go to state 47


State 22

   45 timer: TILDE amount •

    $default  reduce using rule 45 (timer)


State 23

   16 text_item: WORD •
   39 cookware: HWORD WORD • cookware_amount

    LCURL  shift, and go to state 25

    $default  reduce using rule 16 (text_item)

    cookware_amount  go to state 48


State 24

   17 text_item: MULTIWORD •
   40 cookware: HWORD MULTIWORD • cookware_amount

    LCURL  shift, and go to state 25

    $default  reduce using rule 17 (text_item)

    cookware_amount  go to state 49


State 25

   32 cookware_amount: LCURL • RCURL
   33                | LCURL • WHTS RCURL
   34                | LCURL • NUMBER RCURL
   35                | LCURL • WORD RCURL
   36                | LCURL • MULTIWORD RCURL

    WORD       shift, and go to state 50
    MULTIWORD  shift, and go to state 51
    NUMBER     shift, and go to state 52
    RCURL      shift, and go to state 53
    WHTS       shift, and go to state 54


State 26

   13 direction: HWORD text_item •
   20 text_item: text_item • WORD
   21          | text_item • MULTIWORD
   22          | text_item • NUMBER
   23          | text_item • METADATA

    WORD       shift, and go to state 36
    MULTIWORD  shift, and go to state 37
    NUMBER     shift, and go to state 38
    METADATA   shift, and go to state 39

    WORD       [reduce using rule 13 (direction)]
    MULTIWORD  [reduce using rule 13 (direction)]
    NUMBER     [reduce using rule 13 (direction)]
    $default   reduce using rule 13 (direction)


State 27

   38 cookware: HWORD cookware_amount •

    $default  reduce using rule 38 (cookware)


State 28

   16 text_item: WORD •
   43 ingredient: ATWORD WORD • amount

    LCURL  shift, and go to state 21

    $default  reduce using rule 16 (text_item)

    amount  go to state 55


State 29

   17 text_item: MULTIWORD •
   44 ingredient: ATWORD MULTIWORD • amount

    LCURL  shift, and go to state 21

    $default  reduce using rule 17 (text_item)

    amount  go to state 56


State 30

   14 direction: ATWORD text_item •
   20 text_item: text_item • WORD
   21          | text_item • MULTIWORD
   22          | text_item • NUMBER
   23          | text_item • METADATA

    WORD       shift, and go to state 36
    MULTIWORD  shift, and go to state 37
    NUMBER     shift, and go to state 38
    METADATA   shift, and go to state 39

    WORD       [reduce using rule 14 (direction)]
    MULTIWORD  [reduce using rule 14 (direction)]
    NUMBER     [reduce using rule 14 (direction)]
    $default   reduce using rule 14 (direction)


State 31

   42 ingredient: ATWORD amount •

    $default  reduce using rule 42 (ingredient)


State 32

    5 line: METADATA NL •

    $default  reduce using rule 5 (line)


State 33

    4 line: step NL •

    $default  reduce using rule 4 (line)


State 34

    8 step: step WHTS •

    $default  reduce using rule 8 (step)


State 35

    7 step: step direction •

    $default  reduce using rule 7 (step)


State 36

   20 text_item: text_item WORD •

    $default  reduce using rule 20 (text_item)


State 37

   21 text_item: text_item MULTIWORD •

    $default  reduce using rule 21 (text_item)


State 38

   22 text_item: text_item NUMBER •

    $default  reduce using rule 22 (text_item)


State 39

   23 text_item: text_item METADATA •

    $default  reduce using rule 23 (text_item)


State 40

   15 direction: text_item WHTS •

    $default  reduce using rule 15 (direction)


State 41

   47 timer: TILDE WORD amount •

    $default  reduce using rule 47 (timer)


State 42

   48 timer: TILDE MULTIWORD amount •

    $default  reduce using rule 48 (timer)


State 43

   28 amount: LCURL WORD • RCURL
   29       | LCURL WORD • UNIT RCURL

    UNIT   shift, and go to state 57
    RCURL  shift, and go to state 58


State 44

   30 amount: LCURL MULTIWORD • RCURL
   31       | LCURL MULTIWORD • UNIT RCURL

    UNIT   shift, and go to state 59
    RCURL  shift, and go to state 60


State 45

   26 amount: LCURL NUMBER • RCURL
   27       | LCURL NUMBER • UNIT RCURL

    UNIT   shift, and go to state 61
    RCURL  shift, and go to state 62


State 46

   24 amount: LCURL RCURL •

    $default  reduce using rule 24 (amount)


State 47

   25 amount: LCURL WHTS • RCURL

    RCURL  shift, and go to state 63


State 48

   39 cookware: HWORD WORD cookware_amount •

    $default  reduce using rule 39 (cookware)


State 49

   40 cookware: HWORD MULTIWORD cookware_amount •

    $default  reduce using rule 40 (cookware)


State 50

   35 cookware_amount: LCURL WORD • RCURL

    RCURL  shift, and go to state 64


State 51

   36 cookware_amount: LCURL MULTIWORD • RCURL

    RCURL  shift, and go to state 65


State 52

   34 cookware_amount: LCURL NUMBER • RCURL

    RCURL  shift, and go to state 66


State 53

   32 cookware_amount: LCURL RCURL •

    $default  reduce using rule 32 (cookware_amount)


State 54

   33 cookware_amount: LCURL WHTS • RCURL

    RCURL  shift, and go to state 67


State 55

   43 ingredient: ATWORD WORD amount •

    $default  reduce using rule 43 (ingredient)


State 56

   44 ingredient: ATWORD MULTIWORD amount •

    $default  reduce using rule 44 (ingredient)


State 57

   29 amount: LCURL WORD UNIT • RCURL

    RCURL  shift, and go to state 68


State 58

   28 amount: LCURL WORD RCURL •

    $default  reduce using rule 28 (amount)


State 59

   31 amount: LCURL MULTIWORD UNIT • RCURL

    RCURL  shift, and go to state 69


State 60

   30 amount: LCURL MULTIWORD RCURL •

    $default  reduce using rule 30 (amount)


State 61

   27 amount: LCURL NUMBER UNIT • RCURL

    RCURL  shift, and go to state 70


State 62

   26 amount: LCURL NUMBER RCURL •

    $default  reduce using rule 26 (amount)


State 63

   25 amount: LCURL WHTS RCURL •

    $default  reduce using rule 25 (amount)


State 64

   35 cookware_amount: LCURL WORD RCURL •

    $default  reduce using rule 35 (cookware_amount)


State 65

   36 cookware_amount: LCURL MULTIWORD RCURL •

    $default  reduce using rule 36 (cookware_amount)


State 66

   34 cookware_amount: LCURL NUMBER RCURL •

    $default  reduce using rule 34 (cookware_amount)


State 67

   33 cookware_amount: LCURL WHTS RCURL •

    $default  reduce using rule 33 (cookware_amount)


State 68

   29 amount: LCURL WORD UNIT RCURL •

    $default  reduce using rule 29 (amount)


State 69

   31 amount: LCURL MULTIWORD UNIT RCURL •

    $default  reduce using rule 31 (amount)


State 70

   27 amount: LCURL NUMBER UNIT RCURL •

    $default  reduce using rule 27 (amount)
